# prep-legendre

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  gen.py  main.cpp  main.h  main_inner.cpp  main_noprep.cpp  plot.py  shell.nix  src.h
